syntax = "proto3";

package proto.profile;

import "data/entities.proto";

message ProfileRequest {
  oneof operation_request {
    CreateProfileRequest create_profile_request = 1;
    RetrieveProfileRequest retrieve_profile_request = 2;
    EditProfileRequest edit_profile_request = 3;
    DeleteProfileRequest delete_profile_request = 4;
  }
}

message ProfileResponse {
  oneof operation_response {
    CreateProfileResponse create_profile_response = 1;
    RetrieveProfileResponse retrieve_profile_response = 2;
    EditProfileResponse edit_profile_response = 3;
    DeleteProfileResponse delete_profile_response = 4;
  }
}

// Operation types and their responses

// --- Profile Creation ---
message CreateProfileRequest {
  oneof profile_type {
    data.StudentProto student_profile = 1;
    data.FacultyProto faculty_profile = 2;
  }
}

message CreateProfileResponse {
  bool success = 1;
  int32 profile_id = 2;
  string error_message = 3;
  oneof created_profile {
    data.StudentProto created_student = 4;
    data.FacultyProto created_faculty = 5;
  }
}

// --- Profile Retrieval ---
message RetrieveProfileRequest {
  string user_email = 1;
}

message RetrieveProfileResponse {
  bool success = 1;
  int32 profile_id = 2;
  string error_message = 3;
  oneof profile_type {
    data.StudentProto retrieved_student = 4;
    FacultyProfile retrieved_faculty = 5;
  }
}

// --- Profile Editing ---
message EditProfileRequest {
  string user_email = 1;
  oneof profile_type {
    data.StudentProto student_profile = 2;
    data.FacultyProto faculty_profile = 3;
  }
}

message EditProfileResponse {
  bool success = 1;
  int32 profile_id = 2;
  string error_message = 3;
  oneof edited_profile {
    data.StudentProto edited_student = 4;
    data.FacultyProto edited_faculty = 5;
  }
}

// --- Profile Deletion ---
message DeleteProfileRequest {
  string user_email = 1;
}

message DeleteProfileResponse {
  bool success = 1;
  int32 profile_id = 2;
  string error_message = 3;
}

// --- Helper Structures ---
// These structures might be similar to those in data/entities.proto but are
// specific to the profile module, i.e. they will not be used by other modules.
// If any of these structures are needed by other modules in the future, they
// should be moved to the data/entities.proto file.
message FacultyProfile {
  data.FacultyProto faculty = 1;
  repeated data.ProjectProto projects = 2;
}